@@ -3,6 +3,7 @@
    Moravec.
  - Add constructor tests.
  - Rewrite checks in Wikidata to use of Mo::utils.
+ - Rewrite checks in Item to use of Mo::utils.
 
 0.08 2024-06-21T09:12:52+02:00
  - Add Cieszyn to publishing places cleanup.
